fixed connection string, added version of app with no crystal reports

--- a/Desktop App/Crystal Report App/FrmHome/App.config
+++ b/Desktop App/Crystal Report App/FrmHome/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="FrmHome.Properties.Settings.ExaminationConnectionString"
-            connectionString="Data Source=DESKTOP-PD2EQSQ;Initial Catalog=Examination;Integrated Security=True"
+            connectionString="Data Source=.;Initial Catalog=Examination;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
