--- a/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
+++ b/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
@@ -179,23 +179,35 @@
     <Compile Include="CourseTopic.Designer.cs">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </Compile>
-    <Compile Include="CrystalReport1.cs">
+    <Compile Include="Reports\CrystalReport1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CrystalReport1.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CrystalReport2.cs">
+    <Compile Include="Reports\CrystalReport2.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CrystalReport2.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CrystalReport3.cs">
+    <Compile Include="Reports\CrystalReport3.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CrystalReport3.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\ViewExamWithAnswers.cs">
+      <DependentUpon>ViewExamWithAnswers.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="ViewExamForCorrections.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewExamForCorrections.Designer.cs">
+      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewExam.cs">
       <SubType>Form</SubType>
@@ -203,13 +215,13 @@
     <Compile Include="ViewExam.Designer.cs">
       <DependentUpon>ViewExam.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewExamForStudent.cs">
+    <Compile Include="Reports\ViewExamForStudent.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ViewExamForStudent.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="R4CourseTopic.cs">
+    <Compile Include="Reports\R4CourseTopic.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>R4CourseTopic.rpt</DependentUpon>
@@ -237,26 +249,33 @@
     <EmbeddedResource Include="CourseTopic.resx">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CrystalReport1.rpt">
+    <EmbeddedResource Include="Reports\CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="CrystalReport2.rpt">
+    <EmbeddedResource Include="Reports\CrystalReport2.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport2.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="CrystalReport3.rpt">
+    <EmbeddedResource Include="Reports\CrystalReport3.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport3.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\ViewExamWithAnswers.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ViewExamWithAnswers.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewExam.resx">
       <DependentUpon>ViewExam.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ViewExamForStudent.rpt">
+    <EmbeddedResource Include="ViewExamForCorrections.resx">
+      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\ViewExamForStudent.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ViewExamForStudent.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="R4CourseTopic.rpt">
+    <EmbeddedResource Include="Reports\R4CourseTopic.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>R4CourseTopic.cs</LastGenOutput>
     </EmbeddedResource>
