--- a/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
+++ b/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
@@ -187,6 +187,18 @@
     <Compile Include="CourseTopic.Designer.cs">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reports\ViewExamForStudent - Copy.cs">
+      <DependentUpon>ViewExamForStudent - Copy.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="viewStudnetIndepartment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="viewStudnetIndepartment.Designer.cs">
+      <DependentUpon>viewStudnetIndepartment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\CrystalReport1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -203,6 +215,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CrystalReport3.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\viewStudentInDepartment.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>viewStudentInDepartment.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Reports\ViewExamWithAnswers.cs">
@@ -257,6 +275,13 @@
     <EmbeddedResource Include="CourseTopic.resx">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\ViewExamForStudent - Copy.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ViewExamForStudent - Copy.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="viewStudnetIndepartment.resx">
+      <DependentUpon>viewStudnetIndepartment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
@@ -268,6 +293,10 @@
     <EmbeddedResource Include="Reports\CrystalReport3.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport3.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\viewStudentInDepartment.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>viewStudentInDepartment.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\ViewExamWithAnswers.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
