--- a/Desktop App/Trial/Trial.csproj
+++ b/Desktop App/Trial/Trial.csproj
@@ -51,16 +51,25 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ExaminationDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="frmExam.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmExam.Designer.cs">
+      <DependentUpon>frmExam.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAvailableCoursesForExam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAvailableCoursesForExam.Designer.cs">
+      <DependentUpon>frmAvailableCoursesForExam.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmAvailableCoursesForExam.resx">
+      <DependentUpon>frmAvailableCoursesForExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmExam.resx">
+      <DependentUpon>frmExam.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
