--- a/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
+++ b/Desktop App/FrmCrystal/FormCrystallRpoer.csproj
@@ -187,6 +187,30 @@
     <Compile Include="CourseTopic.Designer.cs">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewExamForCorrections.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewExamForCorrections.Designer.cs">
+      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\CrystalReport1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrystalReport1.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ViewInstructorCourses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewInstructorCourses.Designer.cs">
+      <DependentUpon>ViewInstructorCourses.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\ViewInstructorCourses.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ViewInstructorCourses.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ViewStudentGrades.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -210,18 +234,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>viewStudentInDepartment.rpt</DependentUpon>
       <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Reports\ViewExamWithAnswers.cs">
-      <DependentUpon>ViewExamWithAnswers.rpt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <SubType>Component</SubType>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="ViewExamForCorrections.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ViewExamForCorrections.Designer.cs">
-      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewExam.cs">
       <SubType>Form</SubType>
@@ -263,9 +275,23 @@
     <EmbeddedResource Include="CourseTopic.resx">
       <DependentUpon>CourseTopic.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\CrystalReport1.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\ViewInstructorCourses.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ViewInstructorCourses.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\ViewStudentGrades.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ViewStudentGrades.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewExamForCorrections.resx">
+      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewInstructorCourses.resx">
+      <DependentUpon>ViewInstructorCourses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewStudentGrades.resx">
       <DependentUpon>ViewStudentGrades.cs</DependentUpon>
@@ -277,15 +303,8 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>viewStudentInDepartment.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reports\ViewExamWithAnswers.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>ViewExamWithAnswers.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="ViewExam.resx">
       <DependentUpon>ViewExam.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ViewExamForCorrections.resx">
-      <DependentUpon>ViewExamForCorrections.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\ViewExamForStudent.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
