--- a/hossamforms/WindowsFormsApp1/WindowsFormsApp1/App.config
+++ b/hossamforms/WindowsFormsApp1/WindowsFormsApp1/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="NorthWindCN"
+		<add name="Examination"
 			 connectionString="Data Source=.; Initial Catalog=Examination; Integrated Security=true; TrustServerCertificate=true;"/>
 	</connectionStrings>
 </configuration>
