use diffrent name space for each project

--- a/Desktop App/FrmHome/FrmHome.csproj
+++ b/Desktop App/FrmHome/FrmHome.csproj
@@ -234,6 +234,12 @@
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FrmCrystal\FormCrystallRpoer.csproj">
+      <Project>{72216eba-9cc5-4b56-b7a1-ff6525880448}</Project>
+      <Name>FormCrystallRpoer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
