Instructor windows progress

--- a/Desktop App/FrmCrystal/App.config
+++ b/Desktop App/FrmCrystal/App.config
@@ -6,6 +6,9 @@
         <add name="FrmHome.Properties.Settings.ExaminationConnectionString"
             connectionString="Data Source=.;Initial Catalog=Examination;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="ReportsForm.Properties.Settings.ExaminationConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Examination;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
