Finalizing manage courses window, and UI improvements

--- a/Desktop App/FrmHome/efpt.config.json
+++ b/Desktop App/FrmHome/efpt.config.json
@@ -310,7 +310,15 @@
          "ObjectType": 1
       },
       {
+         "Name": "[dbo].[viewTopicMCQV2]",
+         "ObjectType": 1
+      },
+      {
          "Name": "[dbo].[viewTopicTFQ]",
+         "ObjectType": 1
+      },
+      {
+         "Name": "[dbo].[viewTopicTFQV2]",
          "ObjectType": 1
       },
       {
