--- a/Desktop App/FrmHome/FrmHome.csproj
+++ b/Desktop App/FrmHome/FrmHome.csproj
@@ -236,6 +236,30 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin_AddNewCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_AddNewCourse.Designer.cs">
+      <DependentUpon>Admin_AddNewCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_AddTopic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_AddTopic.Designer.cs">
+      <DependentUpon>Admin_AddTopic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_AssignStudentToCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_AssignStudentToCourse.Designer.cs">
+      <DependentUpon>Admin_AssignStudentToCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_EndCourseForStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_EndCourseForStudent.Designer.cs">
+      <DependentUpon>Admin_EndCourseForStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Context\DbContextExtensions.cs" />
     <Compile Include="Context\ExaminationContext.cs" />
     <Compile Include="Context\ExaminationContext.Functions.cs" />
@@ -322,7 +346,9 @@
     <Compile Include="Entities\viewMCQResult.cs" />
     <Compile Include="Entities\viewTFQResult.cs" />
     <Compile Include="Entities\viewTopicMCQResult.cs" />
+    <Compile Include="Entities\viewTopicMCQV2Result.cs" />
     <Compile Include="Entities\viewTopicTFQResult.cs" />
+    <Compile Include="Entities\viewTopicTFQV2Result.cs" />
     <Compile Include="Entities\v_Instructor.cs" />
     <Compile Include="Entities\v_Students.cs" />
     <Compile Include="Admin_Dashboard.cs">
@@ -336,6 +362,12 @@
     </Compile>
     <Compile Include="Admin_ManageCourses.Designer.cs">
       <DependentUpon>Admin_ManageCourses.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_FormViewQuestions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_FormViewQuestions.Designer.cs">
+      <DependentUpon>Admin_FormViewQuestions.cs</DependentUpon>
     </Compile>
     <Compile Include="frmNewMCQ.cs">
       <SubType>Form</SubType>
@@ -393,14 +425,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Admin_AddNewCourse.resx">
+      <DependentUpon>Admin_AddNewCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_AddTopic.resx">
+      <DependentUpon>Admin_AddTopic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_AssignStudentToCourse.resx">
+      <DependentUpon>Admin_AssignStudentToCourse.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Admin_Dashboard.resx">
       <DependentUpon>Admin_Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_EndCourseForStudent.resx">
+      <DependentUpon>Admin_EndCourseForStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin_ManageCourses.resx">
       <DependentUpon>Admin_ManageCourses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dept.resx">
       <DependentUpon>Dept.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_FormViewQuestions.resx">
+      <DependentUpon>Admin_FormViewQuestions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmNewMCQ.resx">
       <DependentUpon>frmNewMCQ.cs</DependentUpon>
